--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ log = { version = "0.4", default-features = false }
 esp-idf-svc = { version = "0.47.3", default-features = false }
 anyhow = "1.0.75"
 toml-cfg = "0.1.3"
+embassy-executor = { version = "0.3.3", package = "embassy-executor", features = ["nightly", "executor-thread", "integrated-timers", "arch-xtensa" ] }
 
 [build-dependencies]
 embuild = "0.31.3"
