--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,22 +13,22 @@ opt-level = "s"
 debug = true    # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
-[features]
-default = ["std", "embassy", "esp-idf-svc/native", "experimental", "nightly"]
-
-pio = ["esp-idf-svc/pio"]
-std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
-alloc = ["esp-idf-svc/alloc"]
-nightly = ["esp-idf-svc/nightly"]
-experimental = ["esp-idf-svc/experimental"]
-embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]
-
 [dependencies]
 log = { version = "0.4", default-features = false }
-esp-idf-svc = { version = "0.47.3", default-features = false }
+esp-idf-svc = { version = "0.47.3", default-features = false, features = [
+    "native",
+    "std",
+    "binstart",
+    "alloc",
+    "nightly",
+    "experimental",
+    "embassy-sync",
+    "critical-section",
+    "embassy-time-driver",
+] }
 anyhow = "1.0.75"
 toml-cfg = "0.1.3"
-embassy-executor = { version = "0.3.3", package = "embassy-executor", features = ["nightly", "executor-thread", "integrated-timers", "arch-xtensa" ] }
+edge-executor = "0.4.1"
 
 [build-dependencies]
 embuild = "0.31.3"
@@ -37,3 +37,6 @@ embuild = "0.31.3"
 bindings_header = "cam_bindings.h"
 bindings_module = "cam"
 remote_component = { name = "espressif/esp32-camera", version = "2.0.6" }
+
+[patch.crates-io]
+crossbeam-utils = { path = "../crossbeam/crossbeam-utils" }
