--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ esp-idf-svc = { version = "0.47.3", default-features = false, features = [
 anyhow = "1.0.75"
 toml-cfg = "0.1.3"
 edge-executor = "0.4.1"
+embedded-hal-async = "1.0.0-rc.1"
 
 [build-dependencies]
 embuild = "0.31.3"
