--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ anyhow = "1.0.75"
 toml-cfg = "0.1.3"
 edge-executor = "0.4.1"
 embedded-hal-async = "1.0.0-rc.1"
+esp-camera-rs = { path = "esp-camera-rs" }
 
 [build-dependencies]
 embuild = "0.31.3"
@@ -40,4 +41,4 @@ bindings_module = "cam"
 remote_component = { name = "espressif/esp32-camera", version = "2.0.6" }
 
 [patch.crates-io]
-crossbeam-utils = { path = "../crossbeam/crossbeam-utils" }
+crossbeam-utils = { path = "crossbeam/crossbeam-utils" }
